# notice

./: Cargo.toml  README.md
notice/: Cargo.toml
notice-core/: Cargo.toml
notice-eventfd/: Cargo.toml
notice-eventfd/src/: lib.rs
notice-eventfd/tests/: pair.rs
notice-pipe/: Cargo.toml
notice-pipe/src/: lib.rs
notice-pipe/tests/: pair.rs
notice-test/: Cargo.toml
notice-test/src/: lib.rs
notice/src/: lib.rs
notice/tests/: pair.rs
