[package]
name = "notice-eventfd"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
license = "MPL-2.0"
description = "Traits and some implementations for notify/wait pattern"

[dependencies]
notice-core = { path = "../notice-core", version = "0.1.0" }
nix = "0.11.0"

[dev-dependencies]
notice-test = { path = "../notice-test", version = "0.1.0" }
